fix: dialogs have a greater z-index

--- a/src/components/dialogs/Dialog.css
+++ b/src/components/dialogs/Dialog.css
@@ -11,6 +11,7 @@
   position: fixed;
   inset: 0;
   animation: overlayShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
+  z-index: 1000;
 }
 
 .DialogContent {
@@ -26,6 +27,7 @@
   max-height: 85vh;
   padding: 25px;
   animation: contentShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
+  z-index: 1500;
 }
 .DialogContent:focus {
   outline: none;
